--- a/Savio/Info.plist
+++ b/Savio/Info.plist
@@ -28,6 +28,12 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GothamRounded-Light.otf</string>
+		<string>GothamRounded-Medium.otf</string>
+		<string>gotham-rounded-book-2.otf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
