--- a/SavioWishList/SavioWishList.entitlements
+++ b/SavioWishList/SavioWishList.entitlements
@@ -5,6 +5,11 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.extension-demo</string>
+		<string>group.com.mbf.savio</string>
+	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.vatsa.savio.ShareExtensionSavio</string>
 	</array>
 </dict>
 </plist>
